--- a/mootools-colorpicker.css
+++ b/mootools-colorpicker.css
@@ -5,20 +5,28 @@
     cursor:pointer;
 }
 
-.colorpicker-box {
-    border-left: 1px solid #000;
-    border-top: 1px solid #000;
-    position: absolute;
-    padding: 0px;
+.colorpicker-box-show {
+
 }
 
+.colorpicker-box-hide {
+
+}
+.colorpicker-box{
+/*    border-left: 1px solid #000;
+    border-top: 1px solid #000;*/
+    position: absolute;
+    padding: 0px;   
+    width: 120px;
+}
 .colorpicker-box ul {
+    display: flex;
+    flex-wrap: wrap;
     list-style: none;
     padding: 0px;
     margin: 0px;
-    float: left;  
+    float: left; 
 }
-
 .colorpicker-box ul li {
     display: block;
     width: 15px;
@@ -28,4 +36,37 @@
     margin: 0px;
     float: left;
     cursor: pointer;
+}
+.colorpicker-back {
+    position: absolute;
+    top:0;
+    left:0;
+    width: 100%;
+    height: 100%;
+    background-color: #FFF;
+    display: none;
+}
+
+@media screen and (max-width: 640px) {
+    .colorpicker-input {
+        width:88px;
+        height:46px;
+    }
+    .colorpicker-box {
+        position: absolute;
+        top: 10px;
+        width: 97%;
+        z-index: 101;
+    }
+    .colorpicker-box ul {
+        margin: 0 10px;
+    }
+    .colorpicker-box ul li {
+        min-height: 44px;
+        min-width: 44px;
+    }
+    .colorpicker-back {
+        display: block;
+        z-index: 100;
+    }
 }
